# Hailo-Application-Code-Examples

runtime/gstreamer/clip/: README.md  TextImageMatcher.py  aspect_ratio_fix.py  clip_app.py  clip_hailopython.py  clip_hailopython_multi.py  clip_pipeline.py  clip_pipeline_multi.py  clip_text_embeddins.py  embeddings.json  meson.build  multi_stream_embeddings.json  requirements.txt  setup.py  singleton_manager.py
runtime/gstreamer/clip/clip_app/: TextImageMatcher.py  aspect_ratio_fix.py  clip_app.py  clip_pipeline.py  clip_pipeline_multi.py
runtime/gstreamer/clip/cpp/: TextImageMatcher.cpp  TextImageMatcher.hpp  aspect_ratio_fix.cpp  clip.cpp  clip_croppers.cpp  clip_matcher.cpp  clip_matcher.hpp  fastsam_postprocess.cpp  hailo_tappas.pc  meson.build
runtime/gstreamer/clip/onnx/: download.sh
